[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "raguard"
version = "0.1.0"
description = "Deterministic security middleware for RAG applications to prevent context exfiltration via indirect prompt injection."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "RAGuard Contributors"}
]
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1.0,<1.0"]
llamaindex = ["llama-index>=0.10.0,<1.0"]
fastapi = ["fastapi>=0.100.0"]
redis = ["redis>=4.5.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "langchain-core>=0.1.0,<1.0",
    "langchain>=0.1.0,<1.0",
    "llama-index>=0.10.0,<1.0",
    "fastapi>=0.100.0",
    "fakeredis>=2.21.0",
    "pre-commit>=3.6.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
explicit_package_bases = true
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/raguard --cov-report=term-missing --cov-fail-under=85"
