[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "raguard"
version = "1.0.0"
description = "Deterministic security middleware for RAG applications to prevent context exfiltration via indirect prompt injection."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "RAGuard Contributors"}
]
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/harshaygadekar/raguard"
Repository = "https://github.com/harshaygadekar/raguard"
Issues = "https://github.com/harshaygadekar/raguard/issues"
Changelog = "https://github.com/harshaygadekar/raguard/blob/main/CHANGELOG.md"

[project.optional-dependencies]
langchain = ["langchain-core>=0.1.0"]
llamaindex = ["llama-index>=0.10.0,<1.0"]
fastapi = ["fastapi>=0.100.0"]
redis = ["redis>=4.5.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "langchain-core>=0.1.0",
    "langchain>=0.1.0",
    "llama-index>=0.10.0,<1.0",
    "fastapi>=0.100.0",
    "fakeredis>=2.21.0",
    "pre-commit>=3.6.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
explicit_package_bases = true
strict = true
warn_return_any = true
warn_unused_configs = true

# ponytail: numpy is transitive (langchain/llama-index), not imported in src/;
# its PEP 695 stubs break mypy. Skip until mypy ships full PEP 695 support.
[[tool.mypy.overrides]]
module = "numpy.*"
follow_imports = "skip"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/raguard --cov-report=term-missing --cov-fail-under=85"
